# node-metrics-agent

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
config/: prometheus.yml
data/wal/: 00000000
deploy/: daemonset-cpu.yaml  daemonset.yaml  prometheus.yaml
include/: cpu_metrics.hpp  gpu_metrics.hpp  prometheus.hpp
src/: cpu_metrics.cpp  gpu_metrics.cpp  main.cpp  prometheus.cpp  util.cpp
